--- a/package.json
+++ b/package.json
@@ -1,32 +1,17 @@
 {
-  "name": "vlaicuos",
-  "version": "Zeta",
+  "name": "vlaicu-os",
+  "version": "8.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "keywords": [],
+  "author": "Vlaicu Inc",
+  "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^13.2.2",
-    "electron-builder": "^22.11.7",
-    "@mainsilent/linux.js": "^1.1.2"
-  },
-  "build": {
-    "files": [
-      "index.js",
-      "index.html",
-      "sys",
-      "style",
-      "styles",
-      "script",
-      "pages",
-      "img",
-      "fonts"
-    ],
-    "linux": {
-      "target": "AppImage"
-    }
+    "@mainsilent/linux.js": "^1.1.2",
+    "electron": "^22.2.0",
+    "electron-builder": "^22.10.3"
   }
 }
